name:                oniongen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ciehanski/oniongen#readme
license:             BSD3
license-file:        LICENSE
author:              Ryan Ciehanski
maintainer:          ryan@ciehanski.com
copyright:           2020 Ryan Ciehanski
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable oniongen
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ed25519
                     , bytestring
                     , cryptohash
                     , byteable
