name:                oniongen
version:             0.1.0.0
synopsis:            
description:         
homepage:            https://github.com/ciehanski/oniongen-hs
bug-reports:         https://github.com/ciehanski/oniongen-hs/issues
license:             BSD3
license-file:        LICENSE
author:              Ryan Ciehanski
maintainer:          ryan@ciehanski.com
copyright:           2020 Ryan Ciehanski
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable oniongen
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ed25519
                     , bytestring
                     , cryptonite
                     , base32
                     , directory
                     , binary
                     , regex-tdfa
                     , memory

 ghc-options:          -Wall -Wno-missing-signatures -O2

source-repository head
  type:     git
  location: https://github.com/ciehanski/oniongen-hs
